✨ Refactor task service and controller for improved access control
Refactored TaskService and TaskController to use user roles and IDs from JWT for access control, updated repository queries for new entity structure, and improved DTO mapping. Added @Service annotations to service clients, enhanced paged response mapping, and fixed a typo in application.properties. These changes improve security, maintainability, and consistency in task management endpoints.