@@ -1,12 +1,13 @@
 package com.teamtacles.task.teamtacles_api_task.infrastructure.mapper;
 
-import java.util.List;
-
+import com.teamtacles.task.teamtacles_api_task.application.dto.response.PagedResponse;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Component;
 
-import com.teamtacles.task.teamtacles_api_task.application.dto.response.PagedResponse;
+import java.util.List;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Component
 public class PagedResponseMapper {
@@ -16,12 +17,29 @@ public class PagedResponseMapper {
         this.modelMapper = modelMapper;
     }
 
-    // utilização de generics -> Objeto original (s) e objeto que será retornado (T)
-    public <S, T> PagedResponse<T> toPagedResponse (Page<S> sourcePage, Class<T> targetClass) {
+    // Método original, para conversões simples
+    public <S, T> PagedResponse<T> toPagedResponse(Page<S> sourcePage, Class<T> targetClass) {
         List<T> mappedContent = sourcePage.getContent()
                 .stream()
                 .map(source -> modelMapper.map(source, targetClass))
-                .toList();
+                .collect(Collectors.toList());
+
+        return new PagedResponse<>(
+                mappedContent,
+                sourcePage.getNumber(),
+                sourcePage.getSize(),
+                sourcePage.getTotalElements(),
+                sourcePage.getTotalPages(),
+                sourcePage.isLast()
+        );
+    }
+
+    // NOVO MÉTODO: Sobrecarga que aceita uma função de mapeamento customizada
+    public <S, T> PagedResponse<T> toPagedResponse(Page<S> sourcePage, Function<S, T> converter) {
+        List<T> mappedContent = sourcePage.getContent()
+                .stream()
+                .map(converter)
+                .collect(Collectors.toList());
 
         return new PagedResponse<>(
                 mappedContent,
